--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cst8917lab2",
+  "name": "azure-example-functions",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -14,5 +14,8 @@
     "mongodb": "^6.3.0",
     "redis": "^4.6.11"
   },
-  "main": "src/functions/**/*.js"
+  "main": "src/functions/**/*.js",
+  "author": {
+    "name": "Barton Computing Inc"
+  }
 }
